# HIPnosis

./: .dockerignore  .gitignore  .vercelignore  ARCHITECTURE.md  BITACORA.md  CLAUDE.md  DEVIATIONS.md  ESTADO.md  LICENSE  README.md  THREAT_MODEL.md  docker-compose.yml  hipnosis-blueprint.md  hipnosis.md  index.html  vercel.json
orchestrator/: .env.example  pyproject.toml
orchestrator/app/: api.py  main.py  replay.py  store.py
orchestrator/core/: attestation.py  buildsys.py  config.py  errparse.py  gitrepo.py  guard.py  manifest.py  parity.py  patcher.py  report.py  rules.yaml  runner.py  schemas.py  state.py  taxonomy.py  trace.py  wave64.py
orchestrator/core/llm/: client.py  prompts.py  router.py
orchestrator/core/oracle/: base.py  mock.py  real.py
orchestrator/core/phases/: build_loop.py  loop.py  pipeline.py  port.py  scan.py  ship.py  verify.py
orchestrator/templates/: certificate.md  hipnosis-guard.yml  portability.md  pr_body.md
orchestrator/tests/: test_api.py  test_attestation.py  test_build_loop.py  test_buildsys.py  test_errparse.py  test_gitrepo.py  test_guard.py  test_llm.py  test_loop.py  test_manifest.py  test_oracle_gates.py  test_oracle_mock.py  test_parity.py  test_patcher.py  test_pipeline.py  test_port.py  test_redteam.py  test_replay.py  test_report.py  test_runner.py  test_scan.py  test_ship.py  test_state.py  test_taxonomy.py  test_trace.py  test_verify.py  test_wave64.py
orchestrator/tests/fixtures/errparse/: build_cascade.txt  build_leftover_include.txt  build_undeclared_api.txt
orchestrator/tests/fixtures/mock_build/: run.txt  (+3 more)
(+82 files in other folders)
